--- a/themes/LoveIt/layouts/partials/header.html
+++ b/themes/LoveIt/layouts/partials/header.html
@@ -1,5 +1,8 @@
 {{- /* Desktop header */ -}}
 <header class="desktop" id="header-desktop">
+    <div>
+        <a href="/.auth/login/aad">Login</a> | <a href="/.auth/logout">Logout</a>
+    </div>
     <div class="header-wrapper">
         <div class="header-title">
             <a href="{{ .Site.Home.RelPermalink }}" title="{{ .Site.Title }}">
